LU-13441 osd-zfs: remove OSD thread info cache size assertion

Remove assertion which kept OSD thread info cache size under 1000.
This assertion is hit when creating a file with more than 511 stripes.

Signed-off-by: Samuel Atkinson <samatk@amazon.com>
Change-Id: If926ec6653cdd85fb654b2960bc0391442bc0674
Reviewed-on: https://review.whamcloud.com/38187
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>